Modified index Caracteristicas

--- a/index.html
+++ b/index.html
@@ -75,39 +75,41 @@
 				<h2>CARACTERÍSTICAS</h2>
 				<ul>
 					<li class="fragment">
-						<span style="color:red; font-weight: bold">Ligeros: </span><span class="fragment">son procesos dentro del mismo sistema operativo, arrancan de forma instantánea.</span>
-</li>
-<li class="fragment">
-	<span style="color:red; font-weight: bold">Abiertos: </span><span class="fragment">basados en estándares. Se habilitan contenedores en la mayoria de distribuciones Linux e incluso en Windows</span>
-</li>
-<li class="fragment">
-	<span style="color:red; font-weight: bold">Seguros: </span><span class="fragment">cada contenedor se ejecuta de forma aislada</span></li>
-</ul>
-</section>
+						<font color="red" class="fragment">Ligeros: </font><span class="fragment">son procesos dentro del mismo sistema operativo, arrancan de forma instantánea.</span>
+					</li>
+					<li class="fragment">
+						<font color="red" class="fragment">Abiertos: </font><span class="fragment">basados en estándares. Se habilitan contenedores en la mayoria de distribuciones
+							Linux e incluso en Windows</span>
+					</li>
+					<li class="fragment">
+						<font color="red" class="fragment">Seguros: </font><span class="fragment">cada contenedor se ejecuta de forma aislada</span>
+					</li>
+				</ul>
+			</section>
 
-<section>
-	<section>
-		<h3>Máquinas Virtuales vs Contenedores</h3>
-	</section>
-	<section>
-		<h3>Máquinas Virtuales</h3>
-		<p>Necesario emular los sistemas operativos invitados</p>
-		<img src="img/VMs.png" alt="Máquina virtual" height="380" width="480">
-	</section>
-	<section>
-		<h3>Contenedores</h3>
-		<p>Son procesos propios del sistema operativo</p>
-		<img src="img/Containers.png" alt="Contenedores" height="380" width="<48></48>0">
-	</section>
-</section>
-</div>
+			<section>
+				<section>
+					<h3>Máquinas Virtuales vs Contenedores</h3>
+				</section>
+				<section>
+					<h3>Máquinas Virtuales</h3>
+					<p>Necesario emular los sistemas operativos invitados</p>
+					<img src="img/VMs.png" alt="Máquina virtual" height="380" width="480">
+				</section>
+				<section>
+					<h3>Contenedores</h3>
+					<p>Son procesos propios del sistema operativo</p>
+					<img src="img/Containers.png" alt="Contenedores" height="380" width="480">
+				</section>
+			</section>
+		</div>
 
-</div>
+	</div>
 
-<script src="reveal.js/lib/js/head.min.js"></script>
-<script src="reveal.js/js/reveal.js"></script>
+	<script src="reveal.js/lib/js/head.min.js"></script>
+	<script src="reveal.js/js/reveal.js"></script>
 
-<script>
+	<script>
 
 		// Full list of configuration options available at:
 		// https://github.com/hakimel/reveal.js#configuration
@@ -142,7 +144,7 @@
 			]
 		});
 
-</script>
+	</script>
 
 </body>
 
